@@ -1,6 +1,6 @@
-$MAILMAN_HOME = "/var/mailman";
-$ARCHIVE_DIR = $MAILMAN_HOME."/web-archives/private";
-$PUBLIC_ARCHIVE_DIR = $MAILMAN_HOME."/web-archives/public";
-$PUBLIC_RCFILE = $MAILMAN_HOME."/mhonarc/public-rc/base.rc";
-$PRIVATE_RCFILE = $MAILMAN_HOME."/mhonarc/private-rc/base.rc";
-$NAMAZU_HEAD = $MAILMAN_HOME."/namazu/index/NMZ.head"; 
+$MAILMAN_HOME = "/usr/lib/mailman";
+$ARCHIVE_DIR = "/mail/list-archives/private";
+$PUBLIC_ARCHIVE_DIR = "/mail/list-archives/public";
+$PUBLIC_RCFILE = "/home/admin/mhonarc/public-rc/base.rc";
+$PRIVATE_RCFILE = "/home/admin/mhonarc/private-rc/base.rc";
+$NAMAZU_HEAD = "/home/admin/namazu/index/NMZ.head"; 
