@@ -1,7 +1,11 @@
 #!/usr/bin/perl -w
 
-$dirname = "/var/mailman/web-archives/public";
-$NAMAZU_HEAD = "/var/mailman/namazu/index/NMZ.head"; 
+#
+# Writes the list archive search page (http://mail.gnome.org/archives/)
+#
+
+$dirname = "/mail/list-archives/public";
+$NAMAZU_HEAD = "/home/admin/namazu/templates/NMZ.head"; 
 
 sub write_form {
     my ($dirs) = shift;
@@ -64,9 +68,9 @@ EOT
 EOT
 } 
 
-opendir DH, $dirname || die "Cannot open $dirname for indexing: $!\n";
-my @dirs = sort grep { -d "$dirname/$_" && !/^\./ } readdir DH;
-close DH;
+open PUBLIC_LISTS, "/usr/lib/mailman/bin/list_lists -b -a -V gnome.org|" || die "Cannot read list of public lists from mailman: $!\n";
+my @dirs = <PUBLIC_LISTS>;
+close PUBLIC_LISTS;
 
   open INDEX, "> $dirname/index.html" || die "Cannot open index $dirname/index.html: $!\n";
 
@@ -76,7 +80,7 @@ close DH;
 <!-- 
 
 
-     autogenerated by /var/mailman/mhonarc/update-master.pl
+     autogenerated by /home/admin/mhonarc/update-master.pl
      DO *NOT* EDIT! Run the above instead.
 
 
@@ -87,6 +91,7 @@ close DH;
   </head>
   <body>
      <h1>The mail.gnome.org Archives</h1>
+<p><b>NOTICE (2006-06-21):</b> Due to some problems in the recent mailman upgrade, the June 2006 archives are being fixed and the search indexes are being rebuilt. Please bear with us. -- GNOME sysadmin team</p>
 EOT
     write_form (\@dirs);
 
@@ -116,13 +121,13 @@ print INDEX <<EOT;
 <html>
 <!--
 
-     autogenerated by /var/mailman/mhonarc/update-master.pl
+     autogenerated by /home/admin/mhonarc/update-master.pl
      DO *NOT* EDIT! Run the above instead.
 
 -->
 <head>
 <!-- LINK-REV-MADE -->
-<link rev=made href="mailto:webmaster\@mail.gnome.org">
+<link rev=made href="mailto:support\@gnome.org">
 <!-- LINK-REV-MADE -->
 <title>Search mail.gnome.org</title>
 <style type="text/css"><!--
@@ -143,6 +148,7 @@ print INDEX <<EOT;
 </head>
 <body>
 <h1>Search mail.gnome.org</h1>
+<p><b>NOTICE (2006-06-21):</b> Due to some problems in the recent mailman upgrade, the June 2006 archives are being fixed and the search indexes are being rebuilt. Please bear with us. -- GNOME sysadmin team</p>
 <p>
 This index contains <!-- FILE --> 4,826 <!-- FILE --> documents and
 <!-- KEY --> 134,294 <!-- KEY --> keywords. 
