@@ -1,14 +1,14 @@
 #!/bin/bash 
 
-OLD_ARCHIVE_DIR="/var/mailman/archives/private";
-ARCHIVE_DIR="/var/mailman/web-archives/private";
+OLD_ARCHIVE_DIR="/var/lib/mailman/archives/private";
+ARCHIVE_DIR="/mail/list-archives/private";
 
 lists=`ls $OLD_ARCHIVE_DIR | grep -v .mbox`
 
 for list in $lists ; do
   mbox=$OLD_ARCHIVE_DIR/$list.mbox/$list.mbox 
 
-  if /var/mailman/bin/config_list  -o - $list | grep "archive_private = 1" > /dev/null ; then
+  if /usr/lib/mailman/bin/config_list  -o - $list | grep "archive_private = 1" > /dev/null ; then
     private="--private"
   else
     private=""
@@ -27,14 +27,14 @@ for list in $lists ; do
   fi
 
   if [ -f $mbox.old ] ; then
-    if ! /var/mailman/mhonarc/archive.pl $private --listname $list $mbox.old ; then
+    if ! /home/admin/mhonarc/archive.pl $private --listname $list $mbox.old ; then
       echo FAILED!
     fi
   fi
 
   if [ -f $mbox ] ; then
     mv $mbox $mbox.tmp
-    if ! /var/mailman/mhonarc/archive.pl $private --listname $list $mbox.tmp ; then
+    if ! /home/admin/mhonarc/archive.pl $private --listname $list $mbox.tmp ; then
       echo FAILED!
     else
       if [ -f $mbox.old ] ; then  
